Add styling for mobile logo version

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,9 +20,9 @@
 <div id="hero-image-container">
 
     <!-- Chocelegance logo, will only be displayed on mobile -->
-    <div id="mobile-logo" class="text-center d-block d-md-none">
-        <a href="{% url 'home' %}" class="nav-link main-logo-link d-inline-flex">
-          <h2 class="purple-text my-1 chocelegance-logo-text"><strong>chocelegance</strong></h2><span class="small logo-heart">&#10084</span>
+    <div id="mobile-logo" class="d-block d-md-none">
+        <a href="{% url 'home' %}" class="nav-link d-inline-flex">
+          <h2 class=""><strong>chocelegance</strong></h2><span class="small mobile-logo-heart">&#10084</span>
         </a>
       </div>
 
