--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -4,7 +4,8 @@
     <div class="container header-container">
         <!-- <div class="overlay"></div> -->
         <div class="row">
-            <div class="col-6">
+            <!-- Will be displayed differently on different sized screens -->
+            <div class="col-12 col-lg-6 col-md-8">
                 <div class="allauth-form-inner-content">
                     {% block inner_content %}
                     {% endblock %}
