--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -21,7 +21,7 @@
 </div>
 
 
-<div class="container-fluid col-8 mt-5 mx-auto">
+<div class="container-fluid col-12 col-lg-6 col-md-8 mt-2 mx-auto">
     <!-- First row contains page title and selected categories  -->
     <div class="row">
         <div class="col text-center mt-4">
