--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -21,12 +21,12 @@
 </div>
 
 
-<div class="container-fluid col-8 mt-5 mx-auto">
+<div class="container-fluid col-12 col-md-10 col-lg-8 mt-3 mx-auto">
     <!-- One row split into two columns  -->
     <div class="row">
 
         <!-- First column is the chocolate image container -->
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+        <div class="col-12 col-md-6 col-lg-4 offset-lg-2 mt-lg-4">
             <div class="choc-image-container-detail my-5">
                 {% if chocolate.choc_image %}
                 <a href="{{ chocolate.choc_image.url }}" target="_blank">
@@ -43,7 +43,7 @@
         </div>
 
         <!-- Second column is the chocolate details container -->
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4 mt-4">
             <div class="chocolate-details-container mb-5 mt-md-5">
                 <p class="mb-0">{{ chocolate.choc_name }}</p>
                 <p class="lead mb-0 text-left font-weight-bold">€{{ chocolate.choc_price }}</p>
@@ -61,11 +61,7 @@
                 <!-- Displays the diet type below the category (e.g Keto, Vegan, Gluten-Free etc) -->
                 {% if chocolate.choc_dietary_type %}
                 <p class="small mt-1 mb-0">
-                    <a class="text-muted"
-                        href="{% url 'chocolates' %}?category={{ chocolates.choc_dietary_type.dietary_type }}">
-                        <i
-                            class="fa-solid fa-check text-success mr-2"></i>{{ chocolate.choc_dietary_type.diet_friendly_name }}
-                    </a>
+                    <i class="fa-solid fa-check text-success mr-2"></i><span class="text-muted">{{ chocolate.choc_dietary_type.diet_friendly_name }}</span>
                 </p>
                 {% endif %}
 
