--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -26,7 +26,7 @@
     <div class="row">
 
         <!-- First column is the chocolate image container -->
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-2 mt-lg-4">
+        <div class="col-12 col-md-6 col-lg-4 offset-lg-2 mt-4">
             <div class="choc-image-container-detail my-5">
                 {% if chocolate.choc_image %}
                 <a href="{{ chocolate.choc_image.url }}" target="_blank">
@@ -44,9 +44,9 @@
 
         <!-- Second column is the chocolate details container -->
         <div class="col-12 col-md-6 col-lg-4 mt-4">
-            <div class="chocolate-details-container mb-5 mt-md-5">
-                <p class="mb-0">{{ chocolate.choc_name }}</p>
-                <p class="lead mb-0 text-left font-weight-bold">€{{ chocolate.choc_price }}</p>
+            <div class="chocolate-details-container mb-5">
+                <h2 class="mb-2 purple-text">{{ chocolate.choc_friendly_name }}</h2>
+                <p class="lead mb-2 text-left font-weight-bold purple-text">€{{ chocolate.choc_price }}</p>
 
                 <!-- Displays the chocolate category below the price (e.g Dark, Milk, White etc) -->
                 {% if chocolate.choc_category_display %}
@@ -71,23 +71,18 @@
                 {% else %}
                 <small class="text-muted">No Rating</small>
                 {% endif %}
-                <p class="mt-3">{{ chocolate.choc_description }}</p>
+                <p class="mt-3 purple-text">{{ chocolate.choc_description }}</p>
 
-                <!-- Edit and delete buttons are displayed if user is superuser -->
-                {% if request.user.is_superuser %}
-                <small class="ml-2">
-                    <a href="{% url 'edit_chocolate' chocolate.id %}">Edit</a>
-                    <a class=text-danger href="{% url 'delete_chocolate' chocolate.id %}">Delete</a>
-                </small>
-                {% endif %}
+
 
                 <!-- Form starts here, uses POST method to add chocolate to bag -->
                 <form class="form" action="{% url 'add_to_cart' chocolate.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-12">
-                            <p class="mt-3 purple-text"><strong>Quantity:</strong></p>
-                            <div class="form-group w-50">
+                            
+                            <div id="quantity-form-group" class="form-group">
+                                <p class="mt-3 purple-text text-center"><strong>Select Quantity:</strong></p>
                                 <div class="input-group">
 
                                     <!-- Button to reduce number of chocolates -->
@@ -138,6 +133,19 @@
                     </div>
                 </form>
                 <!-- Form ends above here -->
+
+                <!-- Edit and delete buttons are displayed if user is superuser -->
+                {% if request.user.is_superuser %}
+                <div id="super-user-options-container">
+                    <p id="super-user-options-text" class="purple-text">
+                        Superuser options:
+                    </p>
+                    <div id="Superuser-options">
+                    <a id="edit-button-detail" href="{% url 'edit_chocolate' chocolate.id %}">Edit</a>
+                    <a id="delete-button-detail" href="{% url 'delete_chocolate' chocolate.id %}">Delete</a>
+                    </div>
+                </div>
+                {% endif %}
 
             </div>
         </div>
