--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -151,7 +151,7 @@
     </div>
 </div>
 
-<div class="btt-button shadow-sm rounded-2 border border-black">
+<div class="btt-button shadow-sm rounded-2 border border-purple">
     <a class="btt-link d-flex h-100">
         <i id="back-to-top-icon" class="fas fa-arrow-up text-black mx-auto my-auto"></i>
     </a>	
