--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -92,14 +92,14 @@
 
                         <!-- Card body -->
                         <div class="card-body pb-0  rounded-2">
-                            <p class="mb-0">{{ chocolate.choc_name }}</p>
+                            <p class="mb-2 purple-text h4">{{ chocolate.choc_friendly_name }}</p>
                         </div>
 
                         <!-- Card footer -->
                         <div class="card-footer bg-white pt-0 border-0 text-left rounded-2">
                             <div class="row">
                                 <div class="col">
-                                    <p class="lead mb-0 text-left font-weight-bold">€{{ chocolate.choc_price }}</p>
+                                    <p class="mb-2 text-left purple-text">€{{ chocolate.choc_price }}</p>
                                     <!-- Displays the chocolate category below the price (e.g Dark, Milk, White etc) -->
                                     {% if chocolate.choc_category_display %}
                                     <p class="small mt-1 mb-0">
@@ -121,6 +121,8 @@
                                         </a>
                                     </p>
                                     {% endif %}
+
+                                    <!-- Displays the chocolate rating -->
                                     {% if chocolate.choc_rating %}
                                     <small class="text-muted"><i
                                             class="fas fa-star mr-1 text-warning"></i>{{ chocolate.choc_rating }} / 5</small>
@@ -130,10 +132,15 @@
 
                                     <!-- Edit and delete buttons are displayed if user is superuser -->
                                     {% if request.user.is_superuser %}
-                                        <small class="ml-2">
-                                            <a href="{% url 'edit_chocolate' chocolate.id %}">Edit</a>
-                                            <a class=text-danger href="{% url 'delete_chocolate' chocolate.id %}">Delete</a>
-                                        </small>
+                                    <div id="super-user-options-container-main">
+                                        <p id="super-user-options-text-main" class="purple-text">
+                                            Superuser options:
+                                        </p>
+                                        <div id="Superuser-options-main">
+                                        <a id="edit-button-main" href="{% url 'edit_chocolate' chocolate.id %}">Edit</a>
+                                        <a id="delete-button-main" href="{% url 'delete_chocolate' chocolate.id %}">Delete</a>
+                                        </div>
+                                    </div>
                                     {% endif %}
 
                                 </div>
