--- a/static/css/base.css
+++ b/static/css/base.css
@@ -329,6 +329,73 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     border: 1px solid #ed82ed
 }
 
+/* Sep */
+
+#super-user-options-container-main {
+    border: 1px solid #551b8c;
+    border-radius: 10px;
+    width: 100%;
+    padding: .5rem;
+    margin-top: .6rem;
+    margin-bottom: 2rem;
+}
+
+/* #super-user-options-container-main p {
+    font-weight: bold;
+} */
+
+#super-user-options-text-main {
+    margin-bottom: .4rem;
+}
+
+#Superuser-options-main {
+    font-size: .9rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+#edit-button-main {
+    text-align: center;
+    display: inline-block;
+    width: 6rem;
+    height: 1.4rem;
+    background: #551b8c;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+    border: 1px solid #882bde;
+    color: white;
+    text-decoration: none;
+}
+
+#edit-button-main:hover{
+    background: #c71585;
+    color: white;
+    box-shadow: 0 0px 10px #ed82ed;
+    border: 1px solid #ed82ed
+}
+
+#delete-button-main {
+   
+    text-align: center;
+    display: inline-block;
+    width: 6rem;
+    height: 1.4rem;
+    background: #882bde;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+    border: 1px solid #551b8c;
+    color: white;
+    text-decoration: none;
+}
+
+#delete-button-main:hover{
+    background: #c71585;
+    color: white;
+    box-shadow: 0 0px 10px #ed82ed;
+    border: 1px solid #ed82ed
+}
+
+
 
 /* ------------------------------------------------------------------------------------------------------------------------------ Button Styling */
 
