--- a/static/css/base.css
+++ b/static/css/base.css
@@ -335,9 +335,12 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     border: 1px solid #551b8c;
     border-radius: 10px;
     width: 100%;
-    padding: .5rem;
+    max-width: 26rem;
+    padding: .3rem;
     margin-top: .6rem;
-    margin-bottom: 2rem;
+    margin-bottom: .6rem;
+    height: 4.3rem;
+    
 }
 
 /* #super-user-options-container-main p {
@@ -346,18 +349,20 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 
 #super-user-options-text-main {
     margin-bottom: .4rem;
+    text-align: center;
 }
 
 #Superuser-options-main {
     font-size: .9rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 #edit-button-main {
     text-align: center;
     display: inline-block;
-    width: 6rem;
+    width: 5rem;
+    margin-right: .5rem;
     height: 1.4rem;
     background: #551b8c;
     border-radius: 5px;
@@ -378,7 +383,8 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
    
     text-align: center;
     display: inline-block;
-    width: 6rem;
+    width: 5rem;
+    margin-left: .5rem;
     height: 1.4rem;
     background: #882bde;
     border-radius: 5px;
