Remove my-5 class from choc image in detail page

--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -27,7 +27,7 @@
 
         <!-- First column is the chocolate image container -->
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2 mt-4">
-            <div class="choc-image-container-detail my-5">
+            <div class="choc-image-container-detail">
                 {% if chocolate.choc_image %}
                 <a href="{{ chocolate.choc_image.url }}" target="_blank">
                     <img class="card-img-top img-fluid rounded-2" src="{{ chocolate.choc_image.url }}"
