--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -4,7 +4,7 @@
     <ul class="navbar-nav mx-auto">
 
         <!-- Displays home link on smaller screens -->
-        <li class="nav-item d-block d-md-none">
+        <li class="nav-item d-block d-lg-none">
             <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="{% url 'home' %}" id="home-link">
                 Home
             </a>
