--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -24,8 +24,8 @@
 <div class="container-fluid col-12 col-lg-8 col-md-8 mt-2 mx-auto">
     <!-- First row contains page title and selected categories  -->
     <div class="row">
-        <div class="col text-center mt-4">
-            <!-- <h2 class="logo-font">Chocolates</h2> -->
+        <div class="col text-center mt-2 purple-text">
+            <h2>Chocolates</h2>
 
             {% for c in current_categories %}
             <a class="category-badge text-decoration-none" href="{% url 'chocolates' %}?choc_category_display={{ c.choc_category_name }}">
