Add xl bootstrap responsive class to choc image detail container

--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -26,7 +26,7 @@
     <div class="row">
 
         <!-- First column is the chocolate image container -->
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-2 mt-4">
+        <div class="col-12 col-md-6 col-lg-6 col-xl-4 offset-xl-2">
             <div class="choc-image-container-detail">
                 {% if chocolate.choc_image %}
                 <a href="{{ chocolate.choc_image.url }}" target="_blank">
