--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -21,7 +21,7 @@
 </div>
 
 
-<div class="container-fluid col-12 col-md-10 col-lg-8 mt-3 mx-auto">
+<div class="container-fluid col-12 col-md-10 col-lg-8 mt-5 mx-auto">
     <!-- One row split into two columns  -->
     <div class="row">
 
@@ -43,7 +43,7 @@
         </div>
 
         <!-- Second column is the chocolate details container -->
-        <div class="col-12 col-md-6 col-lg-4 mt-4">
+        <div class="col-12 col-md-6 col-lg-4">
             <div class="chocolate-details-container mb-5">
                 <h2 class="mb-2 purple-text">{{ chocolate.choc_friendly_name }}</h2>
                 <p class="lead mb-2 text-left font-weight-bold purple-text">€{{ chocolate.choc_price }}</p>
