--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -26,7 +26,7 @@
     <div class="row">
 
         <!-- First column is the chocolate image container -->
-        <div class="col-12 col-md-6 col-lg-6 col-xl-4 offset-xl-2">
+        <div class="col-12 col-md-6 col-lg-6 col-xl-4 offset-xl-2 mb-4">
             <div class="choc-image-container-detail">
                 {% if chocolate.choc_image %}
                 <a href="{{ chocolate.choc_image.url }}" target="_blank">
@@ -71,7 +71,35 @@
                 {% else %}
                 <small class="text-muted">No Rating</small>
                 {% endif %}
-                <p class="mt-3 purple-text">{{ chocolate.choc_description }}</p>
+
+                <!-- Chocolate description -->
+                <p class="mt-3 purple-text">
+                    {{ chocolate.choc_description }}
+                </p>
+
+                <!-- Macro Nutrients -->
+                <div class="purple-text">
+                    <h6 class="font-weight-bold">
+                        Nutritional Information (per piece):
+                    </h6>
+                    <ul>
+                        <li>
+                            Calories: {{ chocolate.choc_calories }} kcal
+                        </li>
+                        <li>
+                            Protein: {{ chocolate.choc_protein }} grams
+                        </li>
+                        <li>
+                            Sugar: {{ chocolate.choc_sugar }} grams
+                        </li>
+                        <li>
+                            Carbs: {{ chocolate.choc_carbs }} grams
+                        </li>
+                        <li>
+                            Fat: {{ chocolate.choc_fat }} grams
+                        </li>
+                    </ul>
+                </div>
 
 
 
