--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -77,6 +77,12 @@
                     {{ chocolate.choc_description }}
                 </p>
 
+                
+                <!-- Pieces per item -->
+                <p class="mt-3 purple-text ">
+                    <span class="font-weight-bold">No. of pieces:</span> {{ chocolate.choc_pieces }}
+                </p>
+
                 <!-- Macro Nutrients -->
                 <div class="purple-text">
                     <h6 class="font-weight-bold">
