Add ingredients to chocolate detail page

--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -83,6 +83,11 @@
                     <span class="font-weight-bold">No. of pieces:</span> {{ chocolate.choc_pieces }}
                 </p>
 
+                <!-- Ingredients-->
+                <p class="mt-3 purple-text ">
+                    <span class="font-weight-bold">Ingredients:</span> {{ chocolate.choc_ingredients }}
+                </p>
+
                 <!-- Macro Nutrients -->
                 <div class="purple-text">
                     <h6 class="font-weight-bold">
