--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,13 +17,13 @@
                 All Chocolates
             </a>
             <div class="dropdown-menu border-purple" aria-labelledby="all-products-link">
-                <a href="{% url 'chocolates'%}?sort=choc_price&direction=asc" class="dropdown-item purple-text">By
+                <a href="{% url 'chocolates'%}?sort=choc_price&direction=asc" class="dropdown-item purple-text-transition">By
                     Price</a>
-                <a href="{% url 'chocolates'%}?sort=choc_rating&direction=desc" class="dropdown-item purple-text">By
+                <a href="{% url 'chocolates'%}?sort=choc_rating&direction=desc" class="dropdown-item purple-text-transition">By
                     Rating</a>
                 <a href="{% url 'chocolates'%}?sort=choc_category_display&direction=asc"
-                    class="dropdown-item purple-text">By Category</a>
-                <a href="{% url 'chocolates' %}" class="dropdown-item purple-text"><strong>All Chocolates</strong></a>
+                    class="dropdown-item purple-text-transition">By Category</a>
+                <a href="{% url 'chocolates' %}" class="dropdown-item purple-text-transition"><strong>All Chocolates</strong></a>
             </div>
         </li>
 
@@ -34,14 +34,14 @@
                 Keto
             </a>
             <div class="dropdown-menu border-purple" aria-labelledby="keto-chocolate-link">
-                <a href="{% url 'chocolates' %}?choc_category_display=keto_dark_choc" class="dropdown-item purple-text">Dark
+                <a href="{% url 'chocolates' %}?choc_category_display=keto_dark_choc" class="dropdown-item purple-text-transition">Dark
                     Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category_display=keto_milk_choc" class="dropdown-item purple-text">Milk
+                <a href="{% url 'chocolates' %}?choc_category_display=keto_milk_choc" class="dropdown-item purple-text-transition">Milk
                     Chocolate</a>
                 <a href="{% url 'chocolates' %}?choc_category_display=keto_white_choc"
-                    class="dropdown-item purple-text">White Chocolate</a>
+                    class="dropdown-item purple-text-transition">White Chocolate</a>
                 <a href="{% url 'chocolates' %}?choc_category_display=keto_dark_choc,keto_milk_choc,keto_white_choc"
-                    class="dropdown-item purple-text"><strong>All Keto</strong></a>
+                    class="dropdown-item purple-text-transition"><strong>All Keto</strong></a>
             </div>
         </li>
 
@@ -52,14 +52,14 @@
                 Vegan
             </a>
             <div class="dropdown-menu border-purple" aria-labelledby="keto-chocolate-link">
-                <a href="{% url 'chocolates' %}?choc_category_display=vegan_dark_choc" class="dropdown-item purple-text">Dark
+                <a href="{% url 'chocolates' %}?choc_category_display=vegan_dark_choc" class="dropdown-item purple-text-transition">Dark
                     Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category_display=vegan_milk_choc" class="dropdown-item purple-text">Milk
+                <a href="{% url 'chocolates' %}?choc_category_display=vegan_milk_choc" class="dropdown-item purple-text-transition">Milk
                     Chocolate</a>
                 <a href="{% url 'chocolates' %}?choc_category_display=vegan_white_choc"
-                    class="dropdown-item purple-text">White Chocolate</a>
+                    class="dropdown-item purple-text-transition">White Chocolate</a>
                 <a href="{% url 'chocolates' %}?choc_category_display=vegan_dark_choc,vegan_milk_choc,vegan_white_choc"
-                    class="dropdown-item purple-text"><strong>All Vegan</strong></a>
+                    class="dropdown-item purple-text-transition"><strong>All Vegan</strong></a>
             </div>
         </li>
 
@@ -70,14 +70,14 @@
                 Gluten-Free
             </a>
             <div class="dropdown-menu border-purple" aria-labelledby="keto-chocolate-link">
-                <a href="{% url 'chocolates' %}?choc_category_display=gluten_free_dark_choc" class="dropdown-item purple-text">Dark
+                <a href="{% url 'chocolates' %}?choc_category_display=gluten_free_dark_choc" class="dropdown-item purple-text-transition">Dark
                     Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category_display=gluten_free_milk_choc" class="dropdown-item purple-text">Milk
+                <a href="{% url 'chocolates' %}?choc_category_display=gluten_free_milk_choc" class="dropdown-item purple-text-transition">Milk
                     Chocolate</a>
                 <a href="{% url 'chocolates' %}?choc_category_display=gluten_free_white_choc"
-                    class="dropdown-item purple-text">White Chocolate</a>
+                    class="dropdown-item purple-text-transition">White Chocolate</a>
                 <a href="{% url 'chocolates' %}?choc_category_display=gluten_free_dark_choc,gluten_free_milk_choc,gluten_free_white_choc"
-                    class="dropdown-item purple-text"><strong>All Gluten-Free</strong></a>
+                    class="dropdown-item purple-text-transition"><strong>All Gluten-Free</strong></a>
             </div>
         </li>
 
