--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -91,8 +91,8 @@
                         {% endif %}
 
                         <!-- Card body -->
-                        <div class="card-body pb-0  rounded-2">
-                            <a a href="{% url 'chocolate_detail' chocolate.id %}" class="mb-2 purple-text-transition text-decoration-none h4">{{ chocolate.choc_friendly_name }}</a>
+                        <div class="card-body pb-0 mb-2 rounded-2">
+                            <a a href="{% url 'chocolate_detail' chocolate.id %}" class="purple-text-transition text-decoration-none h3">{{ chocolate.choc_friendly_name }}</a>
                         </div>
 
                         <!-- Card footer -->
