--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@
 <div id="hero-image-container">
 
     <!-- Chocelegance logo placed in hero container, will only be displayed on mobile -->
-    <div id="mobile-logo" class="d-block d-md-none">
+    <div id="mobile-logo" class="d-block d-sm-block d-md-block d-lg-none">
         <a href="{% url 'home' %}" class="nav-link d-inline-flex">
           <h2 class=""><strong>chocelegance</strong></h2><span class="small mobile-logo-heart">&#10084</span>
         </a>
