--- a/static/css/base.css
+++ b/static/css/base.css
@@ -284,6 +284,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     padding: 1.3rem;
     margin-top: 3rem;
     margin-bottom: 2rem;
+    text-align: center;
 }
 
 #super-user-options-container p {
@@ -370,7 +371,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     text-align: center;
     display: inline-block;
     width: 5rem;
-    margin-right: .5rem;
+    margin-right: .1rem;
     height: 1.4rem;
     background: #551b8c;
     border-radius: 5px;
@@ -392,7 +393,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     text-align: center;
     display: inline-block;
     width: 5rem;
-    margin-left: .5rem;
+    margin-left: .1rem;
     height: 1.4rem;
     background: #882bde;
     border-radius: 5px;
