Adjust top margin of allauth inner containers

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -914,6 +914,11 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
         width: 20rem;
         top: 60%;
     }
+
+    .allauth-form-inner-content {
+        margin-top: 10rem !important;
+        border: 1px solid red;;
+    }
 }
 
 @media (min-width: 1100px) {
