--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -35,9 +35,62 @@
     <div class="row">
         <div class="col">
             {% if cart_items %}
+
+            <!-- Cart layout below to be displayed on mobile devices only!! -->
+            <div class="d-block d-md-none">
+                <!-- Two rows with a single full width column -->
+                <div class="row">
+                    <!-- First row includes Cart total -->
+                    <div class="col">
+                        {% include "cart/cart_total.html" %}
+                    </div>
+                </div>
+
+                <div class="row">
+                    <!-- Second row includes checkout buttons and summary -->
+                    <div class="col">
+                        {% include "cart/checkout_buttons.html" %}
+                        <p class="purple-text mb-3">A summary of your cart contents is shown below</p>
+                    </div>
+                </div>
+
+                <!-- Iterates through the cart and generates a row for each item to be displayed -->
+                {% for item in cart_items %}
+
+                <!-- Chocolate image -->
+                <div class="row col-12 col-sm-6 mb-5">
+                    {% include "cart/chocolate_image.html" %}
+                </div>
+
+                <!-- Chocolate info -->
+                <div class="row col-12 col-sm-6 mb-5">
+                    {% include "cart/chocolate_info.html" %}
+                </div>
+
+                <!-- Chocolate Price -->
+                <div class="row col-12 col-sm-6 order-sm-last">
+                    <p class="my-0">Price p/item: €{{ item.chocolate.choc_price }}</p>
+                    <p><strong>Subtotal: </strong>€{{ item.chocolate.choc_price | calc_subtotal:item.quantity }}</p>
+                </div>
+
+                <!-- Quantity form -->
+                <div class="col-12 col-sm-6">
+                    {% include "cart/quantity_form.html" %}
+                </div>
+                <div class="row"><div class="col"><hr></div></div>
+
+                {% endfor %}
+                <div class="btt-button shadow-sm rounded-2 border border-purple">
+                    <a class="btt-link d-flex h-100">
+                        <i id="back-to-top-icon" class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+                    </a>	
+                </div>
+
+            </div>
+
             <!-- Table is only rendered if there is an item in the cart, it will
-            be used to display details of the chocolates added to the cart -->
-            <div class="table-responsive rounded">
+            be used to display details of the chocolates added to the cart. It will also only be shown on medium displays and up. -->
+            <div class="table-responsive rounded d-none d-md-block">
                 <table class="table table-sm table-borderless">
 
                     <!-- Header row of table with column titles -->
@@ -76,7 +129,8 @@
                             {% include "cart/quantity_form.html" %}
                         </td>
                         <td class="py-3">
-                            <p class="my-0 purple-text"><strong>€{{ item.chocolate.choc_price | calc_subtotal:item.quantity }}</strong></p>
+                            <p class="my-0 purple-text">
+                                <strong>€{{ item.chocolate.choc_price | calc_subtotal:item.quantity }}</strong></p>
                         </td>
                     </tr>
                     {% endfor %}
@@ -126,24 +180,38 @@
 {{ block.super }}
 {% include 'chocolates/includes/quantity_input_script.html' %}
 
+
+<!-- Back to Top button JS logic -->
+<script type="text/javascript">
+    $('.btt-link').click(function(e) {
+        window.scrollTo(0,0);
+    });
+
+    // JS Code block validated in JS Hint, no errors
+</script>
+
+
+<!-- Quantity form button JS logic (update/remove) -->
 <script type="text/javascript">
     // Update quantity on click
-    $('.update-link').click(function(e) {
+    $('.update-link').click(function (e) {
         var form = $(this).prev('.update-form');
         form.submit();
     });
 
     // Remove item and reload on click
-    $('.remove-item').click(function(e) {
+    $('.remove-item').click(function (e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
         var url = `remove/${itemId}/`;
-        var data = {'csrfmiddlewaretoken': csrfToken};
+        var data = {
+            'csrfmiddlewaretoken': csrfToken
+        };
 
         $.post(url, data)
-         .done(function() {
-             location.reload();
-         });
+            .done(function () {
+                location.reload();
+            });
     });
     // JS code block validate in JS Hint, no error
 </script>
