--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -202,7 +202,7 @@
     // Remove item and reload on click
     $('.remove-item').click(function (e) {
         var csrfToken = "{{ csrf_token }}";
-        var itemId = $(this).attr('id').split('remove_')[1];
+        var itemId = $(this).attr('class').split('remove_')[1];
         var url = `remove/${itemId}/`;
         var data = {
             'csrfmiddlewaretoken': csrfToken
