--- a/cart/templates/cart/quantity_form.html
+++ b/cart/templates/cart/quantity_form.html
@@ -7,22 +7,22 @@
 
             <!-- Button to reduce number of chocolates -->
             <div class="input-group-prepend">
-                <button class="decrement-qty btn btn-sm btn-black rounded-0"
-                    data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                <button class="decrement-qty btn btn-sm btn-black rounded-0 decrement-qty_{{ item.item_id }}"
+                    data-item_id="{{ item.item_id }}">
                     <span>
                         <i class="fas fa-minus fa-sm purple-text font-weight-bold"></i>
                     </span>
                 </button>
             </div>
 
-            <input class="form-control qty_input text-center border-purple rounded-lg"
+            <input class="form-control qty_input text-center border-purple rounded-lg id_qty_{{ item.item_id }}"
                 type="number" name="quantity" value="{{ item.quantity }}" min="1" max="99"
-                data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
+                data-item_id="{{ item.item_id }}">
 
             <!-- Button to increase number of chocolates -->
             <div class="input-group-append">
-                <button class="increment-qty btn btn-sm btn-black rounded-0"
-                    data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                <button class="increment-qty btn btn-sm btn-black rounded-0 increment-qty_{{ item.item_id }}"
+                    data-item_id="{{ item.item_id }}">
                     <span>
                         <i class="fas fa-plus fa-sm purple-text font-weight-bold"></i>
                     </span>
