Fix bug in chocolate_detail.html regarding quantity inputs

--- a/cart/templates/cart/quantity_form.html
+++ b/cart/templates/cart/quantity_form.html
@@ -22,7 +22,7 @@
             <!-- Button to increase number of chocolates -->
             <div class="input-group-append">
                 <button class="increment-qty btn btn-sm rounded-sm increment-qty_{{ item.item_id }}"
-                    data-item_id="{{ item.item_id }}" data-size="{{ item.size }}">
+                    data-item_id="{{ item.item_id }}">
                     <span>
                         <i class="fas fa-plus fa-sm purple-text font-weight-bold"></i>
                     </span>
